# Ribon

./: .gitignore  CMakeLists.txt  build_cli.txt
OVMF/: OVMF_VARS.fd
Tools/: make_img.py  run.sh  run_qemu.py
arch/aarch64/: CMakeLists.txt  jump.cpp
arch/riscv64/: CMakeLists.txt
arch/x86_64/: CMakeLists.txt  jump.cpp
bootldr/: CMakeLists.txt  autoboot_main.cpp  gui_main.cpp  main.cpp
cmake/: toolchain_aarch64.cmake  toolchain_x86_64.cmake
docs/: Philosophy.md  leyn_bpb.md
include/Ribon/: Common.hpp  Console.hpp  Coord.hpp  Draw.hpp  EfiContext.hpp  Elf.hpp  File.hpp  FrameBuffer.hpp  Image.hpp  Init.hpp  InputSystem.hpp  Math.hpp  Memory.hpp  Print.hpp  Screen.hpp  String.hpp  Time.hpp  Ui.hpp  Utf16String.hpp  elf.hpp
include/Ribon/arch/: KernelJump.hpp
include/Ribon/base/: Utf16String.hpp  Utf8String.hpp  stb_config.h  stb_image.h
include/Ribon/boot/: BootCore.hpp  Types.hpp
include/Ribon/handoff/: LbpbBuilder.hpp
include/Ribon/image/: ElfImage.hpp
include/Ribon/platform/: EfiPlatform.hpp
include/Ribon/policy/: AutoBootPolicy.hpp  GuiBootPolicy.hpp
include/Ribon/ui/: ConsoleOverlay.hpp  Focus.hpp  ImageFrame.hpp  absolute.hpp  button.hpp  create.hpp  label.hpp  layout.hpp  panel.hpp  point.hpp  rect.hpp  relative.hpp  transform.hpp  widget.hpp
include/Ribon/ui/coord/: absolute.hpp  point.hpp  rect.hpp  relative.hpp  renderer.hpp  transform.hpp
include/uefi/: Base.h
include/uefi/X64/: ProcessorBind.h
loaderPkg/: BootLogic.hpp  CMakeLists.txt  FiascoLoader.hpp  LBPBLoader.hpp  LoaderBase.hpp  Multiboot.hpp  MultibootLoader.hpp  leyn_bpb.h
src/: CMakeLists.txt
src/boot/: boot_core.cpp
src/console/: console.cpp  font.cpp  font.hpp  font_map.cpp
src/core/: eficontext.cpp  init.cpp  utf16_string.cpp
src/gfx/: doublebuffer.cpp  doublebuffer.hpp  draw.cpp  framebuffer.cpp  image.cpp  screen.cpp
src/guids/: guids.cpp
src/handoff/: lbpb_builder.cpp
src/image/: elf_image.cpp
src/io/: print.cpp
src/platform/: efi_platform.cpp
src/policy/: autoboot_policy.cpp  gui_boot_policy.cpp
src/runtime/: common.cpp  init.cpp  mem.cpp  stub.cpp
src/stubs/: cli_visual_stubs.cpp
src/ui/: consoleoverlay.cpp  focus.cpp  render.cpp  widget.cpp
tests/bransKernel/: Makefile  kernel.S  linker.ld
